added the real url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Preacher's Docs
-site_url: https://example.com/
+site_url: https://d-henry.github.io/
 nav:
     - Home: index.md
     - About: about.md
